# salmonstats

./: CHANGELOG.md  README.md  salmon.cabal  salmonstats.cabal
.github/workflows/: build.yml  build_release.yml  release.yml
app/: Boss.hs  Command.hs  Config.hs  Filters.hs  Game.hs  King.hs  Main.hs  Player.hs  Round.hs  Summary.hs
app/Config/: Offsets.hs
app/Util/: CSV.hs  StatMap.hs
salmon/: Salmon.hs  Textworthy.hs
salmon/Salmon/: Boss.hs  King.hs  NintendoJSON.hs  Player.hs  Round.hs  Shift.hs  StatMap.hs  WaterLevel.hs  Wave.hs
