cabal-version:      2.4
name:               salmonwatch
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Salmon is pretty tasty

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Baricus
maintainer:         31926270+Baricus@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared
    default-language: GHC2021 
    build-depends:    base ^>=4.18.0.0, aeson, text, containers, vector, time, bytestring

    default-extensions: LambdaCase, OverloadedStrings, OverloadedLists
    ghc-options: -Wall

library salmonrun
  import: shared

  hs-source-dirs: salmon
  exposed-modules: Salmon, Salmon.NintendoJSON, Salmon.Boss, Salmon.WaterLevel, Salmon.Wave, Salmon.Round

  other-modules: 

executable salmonwatch
    import: shared

    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Summary

    -- LANGUAGE extensions used by modules in this package.
    build-depends:    base ^>=4.18.0.0, aeson, text, containers, vector, time, bytestring, salmonrun
    hs-source-dirs:   app
