cabal-version:      3.0
name:               salmonstats
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Salmon is pretty tasty

-- A longer description of the package.
description: A data processing program for JSON dumps of salmon run stats provided by nxapi

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Baricus
maintainer:         31926270+Baricus@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared
    default-language: GHC2021 
    build-depends:    base ^>=4.18.0.0, aeson, text, containers, vector, time, bytestring, directory

    default-extensions: LambdaCase, OverloadedStrings
    ghc-options: -Wall -funbox-small-strict-fields -O2


library salmonrun
  import: shared

  hs-source-dirs: salmon
  exposed-modules: Salmon, Salmon.NintendoJSON, Salmon.Boss, Salmon.WaterLevel, Salmon.Wave, Salmon.Round, Salmon.Shift, Salmon.King, Salmon.StatMap, Textworthy

  other-modules: 

executable salmonstats
    import: shared

    main-is: Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Boss, Filters, King, Util.StatMap, Command

    -- LANGUAGE extensions used by modules in this package.
    build-depends:    salmonrun, optparse-applicative, cassava, some
    hs-source-dirs:   app
