cabal-version:      3.0
name:               salmonstats
version:            0.1.1.0

-- A short (one-line) description of the package.
synopsis: Salmon is pretty tasty

-- A longer description of the package.
description: A data processing program for JSON dumps of salmon run stats provided by nxapi

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            AGPL-3.0-only
author:             Baricus
maintainer:         31926270+Baricus@users.noreply.github.com

-- A copyright notice.
-- copyright:
category:        salmon
extra-doc-files: CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/Baricus/salmonstats.git

common shared
    default-language: GHC2021 
    build-depends:    base ^>=4.18.0.0, 
                      aeson >= 2.2.0 && < 2.3,
                      containers >= 0.6.7 && < 0.7,
                      bytestring >= 0.11.4 && < 0.12,
                      filepath >= 1.4.100 && < 1.5,
                      text >= 2.0.2 && < 2.1,
                      vector >= 0.13.0 && < 0.14,
                      time >= 1.12.2 && < 1.13,
                      config-ini >= 0.2.6 && < 0.3,
                      directory >= 1.3.8 && < 1.4,
					  base64,

    default-extensions: LambdaCase, OverloadedStrings
    ghc-options: -Wall -funbox-small-strict-fields -O2


library salmonrun
  import: shared

  hs-source-dirs: salmon
  exposed-modules: Salmon, Salmon.NintendoJSON, Salmon.Boss, Salmon.WaterLevel, Salmon.Wave, Salmon.Round, Salmon.Shift, Salmon.King, Salmon.StatMap, Salmon.Player, Textworthy

  other-modules: 

executable salmonstats
    import: shared

    main-is: Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Boss, Filters, King, Util.StatMap, Util.CSV, Command, Config.Offsets, Config, Game, Player

    -- LANGUAGE extensions used by modules in this package.
    build-depends:    salmonrun, optparse-applicative >= 0.18.1 && < 0.19
    hs-source-dirs:   app
